se agregaron sections para cada persona

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <title>Proyecto-Batabit</title>
 </head>
 <body>
-    
+    <section class="Pablo"></section>
+    <section class="Fernando"></section>
+    <section class="JuanPablo"></section>
 </body>
 </html>
