--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/css.css">
-    <link rel="stylesheet" href="css/css2.css">
-    <link rel="stylesheet" href="css/css3.css">
+    <link rel="stylesheet" href="css/Pablo.css">
+    <link rel="stylesheet" href="css/Fernando.css">
+    <link rel="stylesheet" href="css/JuanPablo.css">
     <script src="js/js.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
