Se agregaron los elementos div al index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     <title>Proyecto-Batabit</title>
 </head>
 <body>
-    <section class="Pablo"></section>
+    <section class="Pablo">
+        <div class="Caja-Frase"></div>
+        <div class="Caja-Planes"></div>
+        <div class="Caja-Frase-2"></div>
+        <div class="Caja-Img"></div>
+        <div class="Caja-Monedas"></div>
+        <div class="Caja-Actualizar"></div>
+    </section>
     <section class="Fernando"></section>
     <section class="JuanPablo"></section>
 </body>
