se comenzó a trabajar en la rama y se dieron los primeros cambios al index y al css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <body>
     <section class="Pablo"></section>
     <section class="Fernando"></section>
-    <section class="JuanPablo"></section>
+    <section class="JuanPablo">
+        <div class="primera1"><img class="imagen" src="img/bitcoinbaby 1.png"></div>
+
+    </section>
 </body>
 </html>
