--- a/index.html
+++ b/index.html
@@ -13,8 +13,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto-Batabit</title>
 </head>
-<body>
-        <section class="Pablo"></section>
+<body>  
+    <section class="Pablo">
+        <div class="Caja-Frase">
+            <div class="Frase-Img">
+                <div class="Img-Batata"> <img class="batata"src="img/Group 17.png"></div>
+                <div class="Frase"><p class="Batatabit">Batatabit</p></div>
+            </div>
+            <p class="Frase-Revolucion">La próxima revolución en el intercambio de criptomonedas.</p>
+            <p class="Frase-Ayuda">Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>          
+        </div>
+        <div class="Caja-Planes">
+            <div class="Frase-Planes"><p class="Planes">Conoce Nuestros Planes</p></div>
+            <div class="Img-Planes"><img class="Flecha-Planes" src="img/mdi_keyboard_arrow_down.png"></div>
+        </div>
+        <div class="Caja-Img">
+            <img class="Bitcoin" src="img/Bitcoin.png">
+        </div>
+        <div class="Caja-Frase-2">
+            <p class="Frase-2">Visibilizamos todas las tasas de cambio.</p>
+            <p class="Informacion">Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>  
+        </div>
+        <p class="Monedas">Monedas</p>
+        <div class="Caja-Precios">
+            <div class="Caja-Monedas">
+                <p class="Extremos-Izq">Bitcoin</p>
+                <p class="Centros-Izq">Ethereum</p>
+                <p class="Centros-Izq">Ripple</p>
+                <p class="Extremos-Izq-i">Stellar</p>
+            </div>
+            <div class="Precios"> 
+                <p class="Extremos-Drh">$ 1.96</p>
+                <p class="Centros-Drh">$ 0.07</p>
+                <p class="Centros-Drh">$ 2.15</p>
+                <p class="Extremos-Drh-i">$ 4.96</p>
+            </div>
+        </div>
+        <div class="Caja-Actualizar"><p><b>Actualizado:</b> 19 de Julio 23:45</p></div>
+    </section>
         <section class="Fernando">
             <div class="caja-inicio2">
                 <div class="titulo-2"><h1>Creamos un producto sin comparación.</h1></div>
