Se añadio soporte para ipad en la parte de fernando

--- a/index.html
+++ b/index.html
@@ -15,56 +15,25 @@
 </head>
 <body>  
     <section class="Pablo">
-        <div class="Caja-Frase">
-            <div class="Frase-Img">
-                <div class="Img-Batata"> <img class="batata"src="img/Group 17.png"></div>
-                <div class="Frase"><p class="Batatabit">Batatabit</p></div>
-            </div>
-            <p class="Frase-Revolucion">La próxima revolución en el intercambio de criptomonedas.</p>
-            <p class="Frase-Ayuda">Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>          
-        </div>
-        <div class="Caja-Planes">
-            <div class="Frase-Planes"><p class="Planes">Conoce Nuestros Planes</p></div>
-            <div class="Img-Planes"><img class="Flecha-Planes" src="img/mdi_keyboard_arrow_down.png"></div>
-        </div>
-        <div class="Caja-Img">
-            <img class="Bitcoin" src="img/Bitcoin.png">
-        </div>
-        <div class="Caja-Frase-2">
-            <p class="Frase-2">Visibilizamos todas las tasas de cambio.</p>
-            <p class="Informacion">Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>  
-        </div>
-        <p class="Monedas">Monedas</p>
-        <div class="Caja-Precios">
-            <div class="Caja-Monedas">
-                <p class="Extremos-Izq">Bitcoin</p>
-                <p class="Centros-Izq">Ethereum</p>
-                <p class="Centros-Izq">Ripple</p>
-                <p class="Extremos-Izq-i">Stellar</p>
-            </div>
-            <div class="Precios"> 
-                <p class="Extremos-Drh">$ 1.96</p>
-                <p class="Centros-Drh">$ 0.07</p>
-                <p class="Centros-Drh">$ 2.15</p>
-                <p class="Extremos-Drh-i">$ 4.96</p>
-            </div>
-        </div>
-        <div class="Caja-Actualizar"><p><b>Actualizado:</b> 19 de Julio 23:45</p></div>
     </section>
         <section class="Fernando">
             <div class="caja-inicio2">
-                <div class="titulo-2"><h1>Creamos un producto sin comparación.</h1></div>
-                <div class="texto-2"><a>Confiable y diseñado para su uso diario.</a></div>
+                <div class="titulo-2"><h1>Te ayudamos a tomar la mejor decisión.</h1></div>
+                <div class="texto-2"><a>Que la insertidumbre en materia de criptomonedasea cosa del pasado.</a></div>
             </div>
+            <div class="cajas-contenido1">
                 <div class="caja1-2"><img src="img/clock 1.png" alt="" class="reloj">
                 <a class="titulo-cajas2">Tiempo real</a><p class="texto-cajas2">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p></div>
                 <div class="caja2-2"><img src="img/eye 1.png" alt="" class="ojo">
                     <a class="titulo-cajas2">No hay tasas escondidas</a><p class="texto-cajas2">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p></div>    
-                <div class="caja3-2"><img src="img/dollar-sign 1.png" alt="" class="dolar">
+                </div>
+                <div class="cajas-contenido2">
+                    <div class="caja3-2"><img src="img/dollar-sign 1.png" alt="" class="dolar">
                     <a class="titulo-cajas2">Compara monedas</a><p class="texto-cajas2">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p></div>    
                 <div class="caja4-2"><img src="img/check-circle 1.png" alt="" class="cheque">
                     <a class="titulo-cajas2">Información confiable</a><p class="texto-cajas2">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p></div>        
-        </section>
+                </div>
+                </section>
     <section class="JuanPablo"></section>
 </body>
 </html>
