se avanzó en las medidas responsive para ipad

--- a/index.html
+++ b/index.html
@@ -35,23 +35,45 @@
             <p class="Informacion">Traemos información en tiempo real de las casas de cambio y las monedas más importantes del mundo.</p>  
         </div>
         
+        <div class="Caja-Principal">
+        <div class="Caja-1">
         <p class="Monedas">Monedas</p>
-        <div class="Caja-Precios">
-            <div class="Caja-Monedas">
-                <p class="Extremos-Izq">Bitcoin</p>
-                <p class="Centros-Izq">Ethereum</p>
-                <p class="Centros-Izq">Ripple</p>
-                <p class="Extremos-Izq-i">Stellar</p>
+            <div class="Caja-Precios">
+                <div class="Caja-Monedas">
+                    <p class="Extremos-Izq">Bitcoin</p>
+                    <p class="Centros-Izq">Ethereum</p>
+                    <p class="Centros-Izq">Ripple</p>
+                    <p class="Extremos-Izq-i">Stellar</p>
+                </div>
+                <div class="Precios"> 
+                    <p class="Extremos-Drh">$ 1.96</p>
+                    <p class="Centros-Drh">$ 0.07</p>
+                    <p class="Centros-Drh">$ 2.15</p>
+                    <p class="Extremos-Drh-i">$ 4.96</p>
+                </div>
             </div>
-            <div class="Precios"> 
-                <p class="Extremos-Drh">$ 1.96</p>
-                <p class="Centros-Drh">$ 0.07</p>
-                <p class="Centros-Drh">$ 2.15</p>
-                <p class="Extremos-Drh-i">$ 4.96</p>
-            </div>
+            <div class="Caja-Actualizar"><p><b>Actualizado:</b> 19 de Julio 23:45</p></div>
+            <div class="Valores-1"><p>Valores en<b> $USD</b></p></div>
         </div>
-        <div class="Caja-Actualizar"><p><b>Actualizado:</b> 19 de Julio 23:45</p></div>
-        
+        <div class="Caja-2">
+            <p class="Comisiones">Comisiones</p>
+            <div class="Caja-Comisiones">
+                <div class="Caja-Monedas">
+                    <p class="Extremos-Izq">Bitrade</p>
+                    <p class="Centros-Izq">Bitpreco</p>
+                    <p class="Centros-Izq">Novadax</p>
+                    <p class="Extremos-Izq-i">Coinext</p>
+                </div>
+                <div class="Precios"> 
+                    <p class="Extremos-Drh">$ 12.96</p>
+                    <p class="Centros-Drh">$ 13.07</p>
+                    <p class="Centros-Drh">$ 13.15</p>
+                    <p class="Extremos-Drh-i">$ 14.96</p>
+                </div>
+            </div>
+            <div class="Valores-2"><p>Valores en<b> $USD</b></p></div>
+        </div>
+    </div>
 
     </section>
     <section class="Fernando"></section>
