--- a/index.html
+++ b/index.html
@@ -14,72 +14,43 @@
     <title>Proyecto-Batabit</title>
 </head>
 <body>
-    <main class="main">
     <section class="JuanPablo">
-        <img class="Foto1" src="img/bitcoinbaby.png">
-        <h2 class="texto1 tex">Conócelo hoy.</h2>
-        <div class="texto2">
-            <h2 class="texto3 tex">
-                Escoge el plan que mejor se ajuste a ti.
-            </h2>
-            <p class="texto4 tex">
-                Cualquier plan te da acceso completo a nuestra plataforma.
-            </p>
-            <div class="CajaDePrecios">
-                <div class="CajaDePrecios2">
-                <div class="CajaChiquita">
-                <div class="Ch2">
-                <div class="CajaNaranja">Básico</div>
-                <h3 class="TextoDePago">Pago Mensual</h3>
-                <p class="precios">
-                    <span class="PrecioEnDolar">$</span>
-                                    29
-                </p>
-                <p class="Descripcion">
-                 *Ahorras $129 comparado al plan anual.
-                </p>
-                <button class="TextoBoton">Escoger este
-                <img class="Iconos" 
-                src="../img/orange-right-arrow.svg"/>
-                </button>
+        <div class="Imagen">
+        <h1 class="Text-imagen">Conocelo hoy</h1>
+        </div>
+        <h1 class="Text-plan">Escoge el plan que mejor se ajuste a ti.</h1>
+        <h1 class="Text-Cual">Cualquier plan te da acceso completo a nuestra plataforma</h1>
+        <div class="Cajas">
+            <div class="Cajas1">
+            <div class="Cajas2">
+            <div class="ch1">
+            
+            </div>
+            <div class="ch2">
+             <div class="CajaNaranja">
+                <h4>Recomendado</h4>
                 </div>
-                <div class="Ch2">
-                    <div class="CajaNaranja">Recomendado</div>
-                    <h3 class="TextoDePago">Pago Anual</h3>
-                    <p class="precios">
+                <h3 class="TextoDePago">Pago Anual</h3>
+                <p class="precios">
                     <span class="PrecioEnDolar">$</span>
                                 99
                     </p>
-                    <p class="Descripcion">
+                <p class="Descripcion">
                      *Ahorras $129 comparado al plan mensual.
                     </p>
-                    <button class="TextoBoton">Escoger este
+                <button class="TextoBoton">Escoger este
                     <img class="Iconos"
                      src="../img/orange-right-arrow.svg" />
                     </button>
-                    </div>
-                    <div class="Ch2">
-                        <div class="CajaNaranja">Popular</div>
-                        <h3 class="TextoDePago"> Pago Semestral
-                        </h3>
-                        <p class="precios">
-                        <span class="PrecioEnDolar">$</span>
-                                         119
-                        </p>
-                        <p class="Descripcion">
-                                *Ahorras $129 comparado al plan anual.
-                        </p>
-                        <button class="TextoBoton">
-                                Escoger este
-                        <img class="Iconos"
-                            src="../img/orange-right-arrow.svg"/>
-                        </button>
-                        </div>
-                        </div>
-                        </div>
-                        </div>
-                    </main>
-                    <footer class="footer">
+            </div>
+            <div class="ch3">
+            
+            </div>
+            </div>
+            </div>
+        </div>
+        </section>
+        <footer class="footer">
                         <div class="Contenedor">
                             <div class="footer_links">
                                 <a href="#" class="link">Linkedin</a>
@@ -91,8 +62,4 @@
                                 </a>
                             </div>
                         </div>  
-                    </div> 
-                </section> 
 </footer>
-</body>
-</html>
