Se arreglo tamaños y el responsive

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <section class="JuanPablo">
         <div class="Imagen">
+            <img class="Img1" src="img/bitcoinbaby.png">
         <h1 class="Text-imagen">Conocelo hoy</h1>
         </div>
         <h1 class="Text-plan">Escoge el plan que mejor se ajuste a ti.</h1>
@@ -24,7 +25,18 @@
             <div class="Cajas1">
             <div class="Cajas2">
             <div class="ch1">
-            
+                <h3 class="TextoDePago1">Pago Mensual</h3>
+                <p class="precios1">
+                    <span class="PrecioEnDolar1">$</span>
+                                    29
+                </p>
+                <p class="Descripcion1">
+                    *Ahorras $129 comparado al plan anual.
+                   </p>
+                   <button class="TextoBoton1">Escoger este
+                    <img class="Iconos" 
+                    src="../img/orange-right-arrow.svg"/>
+                    </button>
             </div>
             <div class="ch2">
              <div class="CajaNaranja">
@@ -44,7 +56,21 @@
                     </button>
             </div>
             <div class="ch3">
-            
+                        <h3 class="TextoDePago1"> Pago Semestral
+                        </h3>
+                        <p class="precios1">
+                        <span class="PrecioEnDolar1">$</span>
+                                         119
+                        </p>
+                        <p class="Descripcion1">
+                                *Ahorras $129 comparado al plan anual.
+                        </p>
+                        <button class="TextoBoton1">
+                                Escoger este
+                        <img class="Iconos"
+                            src="../img/orange-right-arrow.svg"/>
+                        </button>
+                        </div>
             </div>
             </div>
             </div>
